--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -22,7 +22,7 @@ các trang tĩnh từ mã nguồn được quản lý bằng `git`. Tất cả c
 2. Cài đặt Ruby trên hệ thống của bạn, bằng lệnh `pacman -S ruby`.
    Sau khi cài đặt Ruby, bạn cần cài đặt các thành phần sau
    * RubyGems (trình quản lý gói cho Ruby)
-   * Cài đặt gems bằng lệnh: `gem install nanorc adsf kramdown`
+   * Cài đặt gems bằng lệnh: `gem install nanoc adsf kramdown`
 3. Tạo một nhân bải của mã nguồn trang chủ bằng lệnh
     `git clone git@viettug.org:archlinuxvn`
 4. Bạn sẽ làm việc với
