--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -10,7 +10,7 @@ các trang tĩnh từ mã nguồn được quản lý bằng `git`. Tất cả c
 
 Để viết bài cho nhóm, bạn cần nhớ các điểm sau
 
-1. Tài khoản để sửa bài. Đây là tài khoản để truy cập và mã nguồn (git)
+1. Tài khoản để sửa bài. Đây là tài khoản để truy cập vào mã nguồn (git)
    của trang chủ. Mã nguồn để trên máy phục vụ <http://viettug.org>.
    Bạn cần liên hệ với [Kỳ Anh](/blog/~icy) để có được tài khoản này.
    * Trước khi xin một tài khoản, bạn cần chuẩn bị một cặp `SSH key`; nếu
@@ -18,7 +18,7 @@ các trang tĩnh từ mã nguồn được quản lý bằng `git`. Tất cả c
      Kỳ Anh bản công cộng của cặp khóa đó (nội dung của tập tin có đuôi
      là `.pub`).
    * Sau khi nhận được thông tin qua email riêng, bạn cần đảm bảo thông
-     tin nhận được sẽ không được chia sẻ cho bất kỳ bên thứ ba nào.
+     tin bạn có **không được chia sẻ cho bất kỳ bên thứ ba nào**.
 2. Cài đặt Ruby trên hệ thống của bạn, bằng lệnh `pacman -S ruby`.
    Sau khi cài đặt Ruby, bạn cần cài đặt các thành phần sau
    * RubyGems (trình quản lý gói cho Ruby)
@@ -30,8 +30,7 @@ các trang tĩnh từ mã nguồn được quản lý bằng `git`. Tất cả c
    và [nanoc](http://nanoc.stoneship.org/docs/), vì thế dành chút thời gian
    đọc qua tài liệu của hai phần này khi bạn có thể. Hoặc bạn có thể học
    theo các bài viết đã có trên trang chủ.
-5. Sau khi soạn bài, bạn có thể sử dụng `nanoc build` để  tạo ra các trang
-   tĩnh.
+5. Sau khi soạn bài, bạn có thể sử dụng `nanoc` để tạo ra các trang tĩnh.
 6. Bạn dùng lệnh `nanoc view` để  tạo một máy phục vụ <http://localhost:3000>
    và bạn có thể truy cập địa chỉ này bằng trình duyệt trên máy tính. Bạn
    sẽ có một phiên bản của trang chủ ArchLinuxVn giống đến 99%!
