--- a/content/faq.html
+++ b/content/faq.html
@@ -4,8 +4,8 @@ title: faq
 
 # Câu hỏi thường gặp
 
-1. Linux là gì
-2. ArchLinux là gì
+1. [Linux là gì](/faq/linux)
+2. [ArchLinux là gì](/faq/archlinux)
 3. Tôi dùng ArchLinux được không
 4. ArchLinux được dùng trong môi trường nào
 
