Trying to create page aliases

--- a/content/index.html
+++ b/content/index.html
@@ -17,3 +17,7 @@ Một số thành viên cùng nhau phát triển các dự án chung
 tại <a href="http://github.com/archlinuxvn/">trang riêng của nhóm tại Github</a>.
 Tất cả các thành viên mới đều được hoan nghênh tham gia vào một trong các
 kênh liên lạc này.
+
+Nếu bạn muốn tìm hiểu về ArchLinux hoặc muốn giao lưu, kết bạn với những
+người Việt Nam khác đang dùng ArchLinux, trang web này cùng với tài liệu
+và các kênh liên lạc của nó sẽ giúp ích cho bạn!
