vn/about is now a symbolic link of ../index

--- a/content/vn/about.html
+++ b/content/vn/about.html
@@ -1,11 +1,1 @@
----
-title: about
----
-
-# ArchLinuxVn
-
-Nếu bạn muốn tìm hiểu về ArchLinux hoặc muốn giao lưu, kết bạn với
-những người Việt Nam khác đang dùng ArchLinux, trang web này cùng
-với tài liệu và các kênh liên lạc của nó sẽ giúp ích cho bạn!
-
-Ngoài ra, không còn lời giới thiệu nào thêm!
+../index.html
