--- a/content/vn/bot.html
+++ b/content/vn/bot.html
@@ -8,7 +8,7 @@ title: IRC bot
 kênh (ví dụ: *bot_ka*, *kar*), và nick **bot** chính thức là **archl0n0xvn**.
 
 Mục đích của bot là cung cấp vài gợi ý, ghi nhớ và giúp đỡ. Bot cũng cảnh
-báo một số lời lẽ thích hợp trên kênh.
+báo một số lời lẽ không thích hợp trên kênh.
 
 Bot có nhiều plugin khác nhau. Để biết thêm chi tiết, bạn gõ vào lệnh
 `!help` hoặc `!help <plugin_name>` khi đang ở trong kênh `#archlinuxvn`.
