Add new page vn/irc

--- a/content/vn/bot.html
+++ b/content/vn/bot.html
@@ -4,7 +4,7 @@ title: IRC bot
 
 # Bot ở kênh IRC
 
-Ở kênh IRC nhóm, có một vài nick hoạt động để thực hiện lưu trữ log cho
+Ở [kênh IRC nhóm] [irc], có một vài nick hoạt động để thực hiện lưu trữ log cho
 kênh (ví dụ: *bot_ka*, *kar*), và nick **bot** chính thức là **archl0n0xvn**.
 
 Mục đích của bot là cung cấp vài gợi ý, ghi nhớ và giúp đỡ. Bot cũng cảnh
@@ -13,7 +13,7 @@ báo một số lời lẽ không thích hợp trên kênh.
 Bot có nhiều plugin khác nhau. Để biết thêm chi tiết, bạn gõ vào lệnh
 `!help` hoặc `!help <plugin_name>` khi đang ở trong kênh `#archlinuxvn`.
 Nếu bạn thấy cần cải tiến điều gì, hãy nghịch một chút với **mã nguồn của bot**
-  [có ở github](https://github.com/archlinuxvn/irclog/).
+ở [gitub] [botsrc].
 
 Vài plugin cơ bản của bot
 
@@ -21,3 +21,8 @@ Vài plugin cơ bản của bot
 * **sensor:** Cảnh báo khi bạn văng tục. Sau lần cảnh báo đầu tiên,
   bot im lặng chừng 10 phút trước khi cảnh báo lần tiếp theo.
 * **info:** Cung cấp thông tin cơ bản về nhóm ArchLinuxvn.
+
+
+[irc]: /vn/irc/
+[botsrc]: https://github.com/archlinuxvn/irclog/
+[bot]: /vn/bot/
