--- a/content/vn/irc.html
+++ b/content/vn/irc.html
@@ -13,7 +13,7 @@ Thông tin về kênh
 
 * Dịch vụ cung cấp bởi <http://irc.freenode.net>
 * Kênh: __#archlinuxvn__
-* Thời gian: nhiều thành viên có mặt trên kênh trong giờ làm việc hành chính
+* Thời gian: nhiều thành viên có mặt trên kênh trong giờ làm việc
   ở Việt Nam (9h sáng - 5 giờ chiều).
 * Bot: Xem thông tin ở [bot] []
 * Quản lý kênh: **z1y**, **n0b0dy**
