vn/irc: add sections

--- a/content/vn/irc.html
+++ b/content/vn/irc.html
@@ -9,7 +9,7 @@ email, bạn hãy dùng kênh IRC để nói chuyện với các thành viên kh
 Đây là kênh trao đổi được dùng nhiều bởi nó _đơn giản_ và có các _phần mềm
 giao tiếp chạy trong cửa sổ dòng lệnh_ rất thích hợp với những ai yêu Linux.
 
-Thông tin về kênh
+## Thông tin về kênh
 
 * Dịch vụ cung cấp bởi <http://irc.freenode.net>
 * Kênh: __#archlinuxvn__
@@ -21,6 +21,8 @@ Thông tin về kênh
 
 Bạn chưa từng sử dụng IRC lần nào, có thể thử [dùng giao diện web] [webirc]
 của kênh. Chỉ việc chọn một `nickname` bất kỳ và bắt đầu thôi :)
+
+## Quy tắc ứng xử
 
 Bạn cần lưu ý vài điểm sau khi trao đổi trên kênh IRC
 
