vn/author-guide: fix typo

--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -11,7 +11,8 @@ các trang tĩnh từ mã nguồn được quản lý bằng `git`. Tất cả c
 `markdown`.
 
 Tác giả viết bài cần nắm các bước kỹ thuật, cách sử dụng `git` và cách
-viết bài bằng cú pháp `markdown`. Nhóm các công việc như sau đây.
+viết bài bằng cú pháp `markdown`. Thông tin bổ ích cho việc viết bài
+được chia thành các nhóm như sau đây.
 
 ## Nhóm A: Chỉ thực hiện một lần
 
