vn/member: record new member fta

--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -11,5 +11,5 @@ vui lòng liên hệ để chúng tôi cập nhật.
 
 * **Sinh viên:** nobody, [NgoHuy](/blog/~huy), quangteospk, VHNgoc
 * **Giáo viên. Giảng viên:** tanphu, favadi, lamhuuphuoc
-* **Lập trình viên:** zosolz, gialong
+* **Lập trình viên:** zosolz, gialong, fta
 * **Điều hành hệ thống:** stk, [Kỳ Anh](/blog/~icy), C4NoC, Cooly
