vn/author-guide: Add missing dot

--- a/content/index.html
+++ b/content/index.html
@@ -11,7 +11,7 @@ chỉnh sửa, nhằm cung cấp các thông tin, tài liệu tốt nhất cho n
 dùng Arch ở mức độ <em>cơ bản</em> và <em>trung bình</em>.
 
 Nhóm ArchLinuxVn hoạt động qua các kênh chính: [nhóm thư] [list] và [kênh irc] [irc]
-Một số thành viên cùng nhau phát triển các dự án chung tại [github] []
+Một số thành viên cùng nhau phát triển các dự án chung tại [github] [].
 Tất cả các thành viên mới đều được hoan nghênh tham gia vào một trong các
 kênh liên lạc này.
 
