--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -36,7 +36,7 @@ viết bài bằng cú pháp `markdown`. Thông tin bổ ích cho việc viết 
 
    * Cài đặt gems bằng lệnh: `gem install nanoc adsf kramdown`
 
-3. Tạo một nhân bải của mã nguồn trang chủ bằng lệnh
+3. Tạo một nhân bản của mã nguồn trang chủ bằng lệnh
     `git clone git@viettug.org:archlinuxvn`
 
 ## Nhóm B: Thực hiện một hoặc nhiều lần
