--- a/content/faq/index.html
+++ b/content/faq/index.html
@@ -4,7 +4,7 @@ title: faq
 
 # Câu hỏi thường gặp
 
-1. [Linux là gì](/faq/linux)
+1. [Linux là gì](/faq/what_is_linux/)
 2. [ArchLinux là gì](/faq/archlinux)
 3. Tôi dùng ArchLinux được không
 4. ArchLinux được dùng trong môi trường nào
