faq/linux: fix typo

--- a/content/faq/what_is_linux.html
+++ b/content/faq/what_is_linux.html
@@ -49,7 +49,7 @@ Hệ điều hành này dẫn tới nhân Linux hiện nay. Để ghi nhận cô
 của Linus, năm 2012, Viện Kỹ thuật Phần Lan trao tặng ông
 [giải thưởng kỹ thuật thiên niên kỷ 2012] [2012MTR].
 
-Nếu bắt đầu sử dụng Linux từ bây giờ, biết đâu 20 năm có người sẽ
+Nếu bắt đầu sử dụng Linux từ bây giờ, biết đâu 20 năm sau có người sẽ
 trao bạn một giải thưởng bất ngờ :)
 
 [distrowatch]: http://distrowatch.com/
