faq/what is archlinux: add
add vietnamese text to title of pages
fix typo . links. bla bla

--- a/content/faq/index.html
+++ b/content/faq/index.html
@@ -1,10 +1,10 @@
 ---
-title: faq
+title: faq - Câu hỏi thường gặp
 ---
 
 # Câu hỏi thường gặp
 
 1. [Linux là gì](/faq/what_is_linux/)
-2. [ArchLinux là gì](/faq/archlinux)
+2. [ArchLinux là gì](/faq/what_is_archlinux/)
 3. Tôi dùng ArchLinux được không
 4. ArchLinux được dùng trong môi trường nào
