--- a/content/faq/what_is_linux.html
+++ b/content/faq/what_is_linux.html
@@ -35,8 +35,8 @@ Hệ điều hành cũng có những chi tiết nhỏ nhất, cốt lõi nhất,
 những nhà phát triển tô vẽ, tạo ra bức tranh như họ mong muốn.
 
 Từ nhân Linux, có rất nhiều hệ điều hành: RedHat, Mandrake, Slackware,
-Ubuntu, và tất nhiên, có cả ArchLinux.  Danh sách gần đầy đủ có thể
-xem ở [distrowatch] [].
+Ubuntu, và tất nhiên, có cả [ArchLinux] [].  Danh sách gần đầy đủ có thể
+xem ở [Distro Watch] [].
 
 ## Linus Torvalds
 
@@ -52,7 +52,9 @@ của Linus, năm 2012, Viện Kỹ thuật Phần Lan trao tặng ông
 Nếu bắt đầu sử dụng Linux từ bây giờ, biết đâu 20 năm sau có người sẽ
 trao bạn một giải thưởng bất ngờ :)
 
-[distrowatch]: http://distrowatch.com/
+[Distro Watch]: http://Distro Watch.com/
 [vxworks]: http://www.windriver.com/products/vxworks
 [linuxborn]: http://groups.google.com/group/comp.os.minix/msg/b813d52cbc5a044b
 [2012MTR]: http://www.technologyacademy.fi/blog/2012/04/19/laureates/
+[ArchLinux]: /faq/what_is_archlinux/
+
