faq/what_is_liux: fix link

--- a/content/faq/what_is_linux.html
+++ b/content/faq/what_is_linux.html
@@ -52,7 +52,7 @@ của Linus, năm 2012, Viện Kỹ thuật Phần Lan trao tặng ông
 Nếu bắt đầu sử dụng Linux từ bây giờ, biết đâu 20 năm sau có người sẽ
 trao bạn một giải thưởng bất ngờ :)
 
-[Distro Watch]: http://Distro Watch.com/
+[Distro Watch]: http://distrowatch.com/
 [vxworks]: http://www.windriver.com/products/vxworks
 [linuxborn]: http://groups.google.com/group/comp.os.minix/msg/b813d52cbc5a044b
 [2012MTR]: http://www.technologyacademy.fi/blog/2012/04/19/laureates/
