faq/arch: fix typo

--- a/content/faq/what_is_archlinux.html
+++ b/content/faq/what_is_archlinux.html
@@ -44,7 +44,7 @@ và Ubuntu 12.04.
 
 _(Thực tế, mỗi năm ArchLinux có thực hiện đĩa CD tạm gọi là `phiên bản`,
 nhưng nội dung CD này hầu như chỉ có ích cho người mới làm quen với
-ArchLinux; với những người đang dùng ArchLinux thì luôn có những cập nhật,
+ArchLinux; với những người đang dùng ArchLinux thì luôn có những cập nhật
 hằng ngày bằng cách sử dụng [chương trình pacman] [pacman].)_
 
 ## Người dùng lo nhiều thứ
