faq/archlinux; fix typo + text

--- a/content/faq/what_is_archlinux.html
+++ b/content/faq/what_is_archlinux.html
@@ -67,7 +67,7 @@ vui và am hiểu hoàn toàn khác.
 
 Bạn không thể cài ArchLinux trên một máy tính quá cũ! Khi bắt đầu xây dựng
 ArchLinux vào năm 2002, lập trình viên người Canada `Judd Vinet` chỉ chú
-trong phát triển cho hai kiến trúc `i686` và `x86_64`, mục đích là tận dụng
+trọng phát triển cho hai kiến trúc `i686` và `x86_64`, mục đích là tận dụng
 khả năng của các máy tính đời mới, và nhờ đó có thể ghép kèm các phần mềm
 và kỹ thuật mới, hiện đại của trong hệ thống dùng ArchLinux.
 
@@ -91,9 +91,8 @@ không nên dùng ArchLinux vì nó chỉ mang cho bạn những buồn phiền.
 Bạn sẽ được học và hiểu nhiều vấn đề bản chất của hệ điều hành Linux.
 Bạn được luyện tập khả năng tìm hiểu, nắm bắt và giải quyết vấn đề.
 
-Và tất nhiên, bạn sẽ được giao lưu, học hỏi với những người bạn thân thiện
-giỏi giang đang dùng ArchLinux cho công việc của họ. Những người bạn đó
-ở khắp nơi trên thế giới!
+Và tất nhiên, bạn sẽ được giao lưu, học hỏi với những người bạn thân thiện,
+giỏi giang đang dùng ArchLinux cho công việc của họ.
 
 [Linux]: /faq/what_is_linux/
 [pacman]: /doc/newbie/pacman
