--- a/content/index.html
+++ b/content/index.html
@@ -2,9 +2,9 @@
 title: home
 ---
 
-# Nhóm người dùng ArchLinux Việt Nam
+# Nhóm người dùng [ArchLinux] [] Việt Nam
 
-Đây là trang chủ của nhóm người Việt Nam dùng ArchLinux.
+Đây là trang chủ của nhóm người Việt Nam dùng [ArchLinux] [].
 
 Trang chủ này được thiết kế để mọi thành viên đều có khả năng thay đổi,
 chỉnh sửa, nhằm cung cấp các thông tin, tài liệu tốt nhất cho những người
@@ -15,11 +15,12 @@ Một số thành viên cùng nhau phát triển các dự án chung tại [gith
 Tất cả các thành viên mới đều được hoan nghênh tham gia vào một trong các
 kênh liên lạc này.
 
-Nếu bạn muốn tìm hiểu về ArchLinux hoặc muốn giao lưu, kết bạn với những
-người Việt Nam khác đang dùng ArchLinux, trang web này cùng với tài liệu
+Nếu bạn muốn tìm hiểu về [ArchLinux] [] hoặc muốn giao lưu, kết bạn với những
+người Việt Nam khác đang dùng [ArchLinux] [], trang web này cùng với tài liệu
 và các kênh liên lạc của nó sẽ giúp ích cho bạn!
 
 
 [list]: http://groups.google.com/group/archlinuxvn/
 [irc]: /vn/irc/
 [github]: http://github.com/archlinuxvn/
+[ArchLinux]: /faq/what_is_archlinux/
