news: new item (offline 5)

--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -4,5 +4,14 @@ title: news - Tin tức
 
 # Tin tức
 
-* 1/7/2012: ra mắt trang web mới
+* *5/7/2012:* Thông báo gặp mặt trên [nhóm thư] [offline5]. Lựa chọn thời
+  gian tham dự ở [Doodle] [doodle5].
+  _Nôi dung:_
+  * Trao đổi về cách viết bài cho trang chủ
+  * Làm áo cho các thành viên.
+  * Các vấn đề khác liên quan tới ArchLinux.
+* 1/7/2012: Ra mắt trang web mới. Nội dung tĩnh với phần bình luận hỗ trợ
+  bở Disqus.
 
+[offline5]: http://groups.google.com/group/archlinuxvn/browse_thread/thread/d6df23e614c0fde3
+[doodle5]: http://www.doodle.com/2ymbq9y23rb2dhfs
