vn/news: Fix typo

--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -6,7 +6,7 @@ title: news - Tin tức
 
 * *5/7/2012:* Thông báo gặp mặt trên [nhóm thư] [offline5]. Lựa chọn thời
   gian tham dự ở [Doodle] [doodle5].
-  _Nôi dung:_
+  _Nội  dung:_
   * Trao đổi về cách viết bài cho trang chủ
   * Làm áo cho các thành viên.
   * Các vấn đề khác liên quan tới ArchLinux.
