vn/irc: Add new section to make info. clear

--- a/content/vn/irc.html
+++ b/content/vn/irc.html
@@ -20,8 +20,10 @@ giao tiếp chạy trong cửa sổ dòng lệnh_ rất thích hợp với nhữ
 * Quản lý kênh: **z1y**, **n0b0dy**
 * [Giao diện web] [webirc]
 
+## Giao diện web của kênh
+
 Bạn chưa từng sử dụng IRC lần nào, có thể thử [dùng giao diện web] [webirc]
-của kênh. Chỉ việc chọn một `nickname` bất kỳ và bắt đầu thôi :)
+của kênh. Chỉ việc chọn một `nickname` bất kỳ và [bắt đầu ở liên kết sau] [webirc].
 
 ## Quy tắc ứng xử
 
