--- a/content/vn/irc.html
+++ b/content/vn/irc.html
@@ -23,7 +23,7 @@ giao tiếp chạy trong cửa sổ dòng lệnh_ rất thích hợp với nhữ
 ## Giao diện web của kênh
 
 Bạn chưa từng sử dụng IRC lần nào, có thể thử [dùng giao diện web] [webirc]
-của kênh. Chỉ việc chọn một `nickname` bất kỳ và [bắt đầu ở liên kết sau] [webirc].
+của kênh. Chỉ việc chọn một `nickname` bất kỳ và [bắt đầu ở liên kết này] [webirc].
 
 ## Quy tắc ứng xử
 
