vn/author-guide: add link to gitconfig

--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -39,6 +39,8 @@ viết bài bằng cú pháp `markdown`. Thông tin bổ ích cho việc viết 
 3. Tạo một nhân bản của mã nguồn trang chủ bằng lệnh
     `git clone git@viettug.org:archlinuxvn`
 
+4. Chỉnh sửa tập tin `~/.gitconfig` theo hướng dẫn ở [gitconfig] [].
+
 ## Nhóm B: Thực hiện một hoặc nhiều lần
 
 4. Bạn sẽ làm việc với [markdown] [] và [nanoc] [] và [git] [].
@@ -92,3 +94,4 @@ viết bài bằng cú pháp `markdown`. Thông tin bổ ích cho việc viết 
 [nanoc]: http://nanoc.stoneship.org/docs/
 [git]: http://git-scm.com/
 [gitref]: http://gitref.dragula.org
+[gitconfig]: /doc/git/gitconfig
