vn/bot: add description for xy game

--- a/content/vn/bot.html
+++ b/content/vn/bot.html
@@ -13,16 +13,18 @@ báo một số lời lẽ không thích hợp trên kênh.
 
 Bot có nhiều plugin khác nhau. Để biết thêm chi tiết, bạn gõ vào lệnh
 `!help` hoặc `!help <plugin_name>` khi đang ở trong kênh `#archlinuxvn`.
-Nếu bạn thấy cần cải tiến điều gì, hãy nghịch một chút với **mã nguồn của bot**
-ở [gitub] [botsrc].
+Nếu bạn thấy cần cải tiến điều gì, hãy nghịch một chút với
+[mã nguồn của bot gitub] [botsrc].
 
 Vài plugin cơ bản của bot
 
 * **hello:** Chào bạn khi có ai đó trên kênh chào bạn
 * **sensor:** Cảnh báo khi bạn văng tục. Sau lần cảnh báo đầu tiên,
   bot im lặng chừng 10 phút trước khi cảnh báo lần tiếp theo.
-* **info:** Cung cấp thông tin cơ bản về nhóm ArchLinuxvn.
-
+* **info:** Cung cấp thông tin cơ bản về nhóm ArchLinuxVn.
+* **xy:** Chơi oẳn-tù-tì (bao, búa, kéo) với `bot`. Ví dụ, khi bạn nhập
+  vào `!xy bao` thì `bot` sẽ chọn ra vật ngẫu nhiên và xem ai thắng theo
+  quy tắc `búa > kéo > bao > búa`.
 
 [irc]: /vn/irc/
 [botsrc]: https://github.com/archlinuxvn/irclog/
