We actually use :kramdown

--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -43,7 +43,7 @@ viết bài bằng cú pháp `markdown`. Thông tin bổ ích cho việc viết 
 
 ## Nhóm B: Thực hiện một hoặc nhiều lần
 
-4. Bạn sẽ làm việc với [markdown] [] và [nanoc] [] và [git] [].
+4. Bạn sẽ làm việc với [kramdown] [] và [nanoc] [] và [git] [].
    Hãy dành chút thời gian đọc qua tài liệu của các phần này.
    Bạn có thể học theo các bài viết đã có; đây là cách nhanh nhất.
 
@@ -90,7 +90,7 @@ viết bài bằng cú pháp `markdown`. Thông tin bổ ích cho việc viết 
    `core` để xác nhận các thay đổi của bạn. **Lưu ý** rằng việc này là cần
    thiết để đảm bảo an toàn cho máy phục vụ.
 
-[markdown]: http://daringfireball.net/projects/markdown/syntax
+[kramdown]: http://kramdown.rubyforge.org/syntax.html
 [nanoc]: http://nanoc.stoneship.org/docs/
 [git]: http://git-scm.com/
 [gitref]: http://gitref.dragula.org
