doc/author-guide: link to quickref instead of syntax

--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -90,7 +90,7 @@ viết bài bằng cú pháp `markdown`. Thông tin bổ ích cho việc viết 
    `core` để xác nhận các thay đổi của bạn. **Lưu ý** rằng việc này là cần
    thiết để đảm bảo an toàn cho máy phục vụ.
 
-[kramdown]: http://kramdown.rubyforge.org/syntax.html
+[kramdown]: http://kramdown.rubyforge.org/quickref.html
 [nanoc]: http://nanoc.stoneship.org/docs/
 [git]: http://git-scm.com/
 [gitref]: http://gitref.dragula.org
