vn/author-guide: New item E8

--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -97,6 +97,14 @@ viết bài bằng cú pháp `markdown`. Thông tin bổ ích cho việc viết 
    `created_at: 2012 July 25th`,... để tiện tìm kiếm. Một vài thông tin
    sẽ được dùng trong tương lai để hỗ trợ `blog` và `tìm kiếm`.
 
+7. Hạn chế sử dụng tiếng Anh. Nên tìm cách dịch những từ đơn giản, phổ
+   biến qua tiếng Việt. Nếu bạn không chắc với cách dịch, có thể ghi
+   kèm từ gốc tiếng Anh. Ví dụ, _cập nhật (`update`)_.
+
+8. Đánh dấu các thuật ngữ và các từ ngữ tiếng Anh bằng cặp dấu nháy ngược
+   (giống như để tô màu cho đoạn mã nguồn ngắn.) Việc này làm bài viết
+   dễ đọc hơn, tập trung hơn.
+
 ## Nhóm D: Thông tin khác. Mẹo
 
 7. Sau khi bạn thực hiện thành công `git push`, máy phục vụ của VietTUG
