--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -105,6 +105,25 @@ viết bài bằng cú pháp `markdown`. Thông tin bổ ích cho việc viết 
    (giống như để tô màu cho đoạn mã nguồn ngắn.) Việc này làm bài viết
    dễ đọc hơn, tập trung hơn.
 
+9. Khi xác nhận thay đổi với `git commit`, bạn cần có chú thích tương đối
+   ngắn gọn, nhưng *không nên quá ngắn gọn* (trừ trường hợp các thay đổi
+   nhỏ, không đáng kể.)
+   * Nên dùng tiếng Anh cho chú thích (do một số chương trình `git client`
+     có thể không làm việc với tiếng Việt)s
+   * Bạn có thể theo dõi cách cung cấp chú thích bằng cách theo dõi cách
+     của người khác: từ dòng lệnh gõ `git log` để xem; hoặc
+   * Từ giao diện đồ họa chạy chương trình `gitg`
+   * Nếu phải chú thích trên nhiều dòng, thì dòng đầu tiên là tóm tắt,
+     sau đó là một dòng trắng, và sau đó là các chú thích khác. Ví dụ
+
+<pre>
+git commit -m'This is a subject or short message
+
+This is a long description. The above line is a blank link.'
+</pre>
+
+   Lưu ý rằng đây là những quy ước phổ biến khi làm việc với `git`.
+
 ## Nhóm D: Thông tin khác. Mẹo
 
 7. Sau khi bạn thực hiện thành công `git push`, máy phục vụ của VietTUG
