--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -109,7 +109,7 @@ viết bài bằng cú pháp `markdown`. Thông tin bổ ích cho việc viết 
    ngắn gọn, nhưng *không nên quá ngắn gọn* (trừ trường hợp các thay đổi
    nhỏ, không đáng kể.)
    * Nên dùng tiếng Anh cho chú thích (do một số chương trình `git client`
-     có thể không làm việc với tiếng Việt)s
+     có thể không làm việc với tiếng Việt)
    * Bạn có thể theo dõi cách cung cấp chú thích bằng cách theo dõi cách
      của người khác: từ dòng lệnh gõ `git log` để xem; hoặc
    * Từ giao diện đồ họa chạy chương trình `gitg`
