faq/can i use archlinux: add

--- a/content/faq/index.html
+++ b/content/faq/index.html
@@ -6,5 +6,5 @@ title: faq - Câu hỏi thường gặp
 
 1. [Linux là gì](/faq/what_is_linux/)
 2. [ArchLinux là gì](/faq/what_is_archlinux/)
-3. Tôi dùng ArchLinux được không
+3. [Tôi dùng ArchLinux được không](/faq/can_i_use_archlinux)
 4. ArchLinux được dùng trong môi trường nào
