content: update tags for posts

--- a/content/faq/what_is_linux.html
+++ b/content/faq/what_is_linux.html
@@ -1,6 +1,7 @@
 ---
 title: Linux là gì
 allow_comment: yes
+tags: ['archlinux', 'kernel']
 ---
 
 # Linux là gì
@@ -57,4 +58,3 @@ trao bạn một giải thưởng bất ngờ :)
 [linuxborn]: http://groups.google.com/group/comp.os.minix/msg/b813d52cbc5a044b
 [2012MTR]: http://www.technologyacademy.fi/blog/2012/04/19/laureates/
 [ArchLinux]: /faq/what_is_archlinux/
-
