vn/members: add list of machines

--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -1,5 +1,5 @@
 ---
-title: members
+title: Thành viên
 allow_comment: yes
 tags: ['archlinuxvn']
 ---
@@ -14,6 +14,13 @@ vui lòng liên hệ để chúng tôi cập nhật.
 * **Giáo viên. Giảng viên:** tanphu, favadi, lamhuuphuoc
 * **Lập trình viên:** zosolz, gialong, fta
 * **Điều hành hệ thống:** [stk] [], [KyAnh] [], C4NoC, Cooly
+
+# Danh sách máy xài ArchLinux
+
+* <http://viettug.org>: installed in 2012-04-25, kernel `3.4.4-2`
+* Goodtrans BO: installed in 2011-11-10, kernel `3.3.6-1`
+* icy's PC: installed in 2010-10-18, kernel `3.4.4-2`
+* icy's office box: instaleld in 2012-10-17, kernel `3.3.8-1`
 
 [stk]: http://projektantos.wordpress.com/
 [KyAnh]: /blog/~icy/
