vn/members: fix text

--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -4,7 +4,7 @@ allow_comment: yes
 tags: ['archlinuxvn']
 ---
 
-# Danh sách thành viên
+# Thành viên dùng ArchLinux
 
 Danh sách cách thành viên của ArchLinuxVn (liệt kê theo thứ tự ngẫu nhiên).
 Nếu bạn thấy ai còn thiếu ai trong danh sách này,
@@ -15,7 +15,7 @@ vui lòng liên hệ để chúng tôi cập nhật.
 * **Lập trình viên:** zosolz, gialong, fta
 * **Điều hành hệ thống:** [stk] [], [KyAnh] [], C4NoC, Cooly
 
-# Danh sách máy xài ArchLinux
+# Máy xài ArchLinux
 
 * <http://viettug.org>: installed in 2012-04-25, kernel `3.4.4-2`
 * Goodtrans BO: installed in 2011-11-10, kernel `3.3.6-1`
