vn/members: fix typo

--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -15,7 +15,7 @@ vui lòng liên hệ để chúng tôi cập nhật.
 * **Lập trình viên:** zosolz, gialong, fta
 * **Điều hành hệ thống:** [stk] [], [KyAnh] [], C4NoC, Cooly
 
-# Máy xài ArchLinux
+# Máy dùng ArchLinux
 
 * <http://viettug.org>: installed in 2012-04-25, kernel `3.4.4-2`
 * Goodtrans BO: installed in 2011-11-10, kernel `3.3.6-1`
